--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,16 @@ services:
       - 8000:8000
     volumes:
       - .:/app
+    depends_on:
+      - db
+
+  db:
+    image: postgres:11.14-alpine
+    environment:
+      POSTGRES_DB: main_db
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+    volumes:
+      - .dbdata:/var/lib/postgres
+    ports:
+      - 5431:5432
