--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 asgiref==3.5.2
+backports.zoneinfo==0.2.1
 certifi==2022.6.15
 charset-normalizer==2.1.0
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.1.3
+django-filter==2.4.0
 django-geoposition==0.3.0
 django-rest-swagger==2.2.0
+django-utils-six==2.0
 djangorestframework==3.12.2
 djangorestframework-simplejwt==5.2.0
 drf-yasg==1.20.0
@@ -24,6 +27,7 @@ requests==2.28.1
 ruamel.yaml==0.17.21
 ruamel.yaml.clib==0.2.6
 simplejson==3.17.6
+six==1.16.0
 sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.9
