--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,18 @@
+amqp==5.1.1
 asgiref==3.5.2
 backports.zoneinfo==0.2.1
+billiard==3.6.4.0
+celery==5.2.7
 certifi==2022.6.15
 charset-normalizer==2.1.0
+click==8.1.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.1.3
+django-extensions==3.1.0
 django-filter==2.4.0
 django-geoposition==0.3.0
 django-rest-swagger==2.2.0
@@ -12,14 +20,19 @@ django-utils-six==2.0
 djangorestframework==3.12.2
 djangorestframework-simplejwt==5.2.0
 drf-yasg==1.20.0
+graphviz==0.20.1
 idna==3.3
 inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
+kombu==5.2.4
 MarkupSafe==2.1.1
 openapi-codec==1.3.2
 packaging==21.3
+prompt-toolkit==3.0.30
 psycopg2-binary==2.8.4
+pydotplus==2.0.2
+pygraphviz==1.9
 PyJWT==2.4.0
 pyparsing==3.0.9
 pytz==2022.1
@@ -31,3 +44,5 @@ six==1.16.0
 sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.9
+vine==5.0.0
+wcwidth==0.2.5
